--- a/index.html
+++ b/index.html
@@ -7,18 +7,21 @@
 	<title>GELITO</title>
 </head>
 <body>
-   <div style="background-image: url(img/titulo.jpg);">
+   <div style="background-image: url(img/tela.jpg);">
    <div id="container-imagem"></div>  
 
 
-	<h1>GELITO</h1>
+	<h1>GELITO
+    <img src="img/hmm.png">
+
+  </h1>
 	   
-	<h2>A "combizinha" do melhor sorvete e de melhor qualidade em um palito reciclável, a preço de fábrica!</h2>   
+	<h2>O melhor sorvete e de melhor qualidade em um palito reciclável, a preço de fábrica!</h2>   
    <br>
 
-	<h3>Nosso objetivo é lhe oferecer uma ótima experiência, fazer um trabalho incrível em festas e eventos com um custo aceessível e ainda assim ajudar o meio ambiente com os palitinhos recicláveis. Isso não é interessante?</h3>
-   <br>
-   <br>
+	<h3>Nosso objetivo é lhe proporcionar uma única e ótima experiência, fazer um trabalho incrível nas suas festas e eventos com um custo acessível e preocupado com o meio ambiente já que nossos palitinhos são recicláveis e devolvendo 5 palitinhos, você ganha um picolé de graça. Olha que legal! Conheça mais obre nossa empresa, nossos produtos e se delicie!!!</h3>
+  <br>
+  <br>
 
 	<h2>SABORES DE GELITO:</h2>
    <br>
@@ -53,6 +56,8 @@
      <h2>Estamos localizados no Rio de Janeiro - Barra da Tijuca n°895 
      Fazemos eventos em todos os Estados do Brasil!!!</h2>
      <br> 
+     <H2>Atendemos todo o Brasil!!!</H2>
+        <p>Entre em contato com antecedência</p>
        
 
      <h2>CONTRATE NOSSOS SERVIÇOS ATRAVÉS DO CONTATO/WHATSAPP ABAIXO:</h2>  
