--- a/index.html
+++ b/index.html
@@ -11,22 +11,25 @@
    <div id="container-imagem"></div>  
 
 
-	<h1>GELITO
-    <img src="img/hmm.png">
-
+	<h1>
+    <img src="img/recorte.jpg">
+    GELITO
+    <img src="img/recorte.jpg">
   </h1>
 	   
-	<h2>O melhor sorvete e de melhor qualidade em um palito reciclável, a preço de fábrica!</h2>   
+	<h2>O melhor sorvete no palito, a preço de fábrica!</h2>   
    <br>
 
-	<h3>Nosso objetivo é lhe proporcionar uma única e ótima experiência, fazer um trabalho incrível nas suas festas e eventos com um custo acessível e preocupado com o meio ambiente já que nossos palitinhos são recicláveis e devolvendo 5 palitinhos, você ganha um picolé de graça. Olha que legal! Conheça mais obre nossa empresa, nossos produtos e se delicie!!!</h3>
+	<h3>Nosso objetivo é lhe proporcionar uma única e ótima experiência, fazer um trabalho incrível em eventos com os nossos quiósques.</h3>
   <br>
+  <h4>E AÍ, BORA SE REFRESCAR??? APROVEITE, SE DELICIE!!!</h4>
   <br>
 
 	<h2>SABORES DE GELITO:</h2>
    <br>
 	   <ul>
-          <li>Chocolate (ao leite, branco, meio amargo);</li>
+          <li>Chocolate;</li>
+          <li>Chocolate amrgo;</li>
           <li>Morango;</li>
           <li>Maracujá</li>
           <li>Milho Verde;</li>
@@ -35,8 +38,11 @@
           <li>Manga;</li>
           <li>Limão;</li>
           <li>Coco;</li>
+          <li>Coco queimado;</li>
           <li>Uva e Uva verde;</li>
           <li>Chiclete;</li>
+          <li>Amendoim;</li>
+          <li>Napolitano.</li>
        </ul>
 
      <br>
@@ -45,26 +51,38 @@
         <ul>
            <li>Nutella;</li>
            <li>Leite ninho;</li>
+           <li>Chocolate com banana;</li>
            <li>Kit Kat;</li>
+           <li>Açaí;</li>
            <li>Algodão doce;</li>
            <li>Diamante negro;</li>
            <li>Prestígio;</li>
-           <li>Sensação;</li>
+           <li>Sensação.</li>
         </ul>
-     <br>   
+     <br>  
+
      <br>
+     <h2>DRINKLÉ:</h2>
+     <br>
+         <ul>
+            <li>Abacaxi ao vinho;</li>
+            <li>Cambuci;</li>
+            <li>Limão c/ Gim tônica;</li>
+            <li>Moranco c/ Gim tônica;</li>
+            <li>Capiré.</li>
+         </ul>
+     <br>
+     <h5>ATENÇÃO: os "drinklés" são proibidos para menores de 18 anos!</h5>    
+
      <h2>Estamos localizados no Rio de Janeiro - Barra da Tijuca n°895 
      Fazemos eventos em todos os Estados do Brasil!!!</h2>
-     <br> 
-     <H2>Atendemos todo o Brasil!!!</H2>
         <p>Entre em contato com antecedência</p>
-       
-
-     <h2>CONTRATE NOSSOS SERVIÇOS ATRAVÉS DO CONTATO/WHATSAPP ABAIXO:</h2>  
-        <p>(11) 985X0-X95X</p> 
-     	<p>(11) 59XX4-322X</p>
-     <h2>OU PELAS REDES SOCIAIS</h2>
-        <p>@gelito - no Instragram e no Facebook</p>	
+     <br>
+     <br> 
+     <h2>CONTRATE NOSSOS SERVIÇOS ATRAVÉS DO NOSSO WHATSAPP:</h2>  
+        <p>(11) 985X0-X95X ou (11) 59XX4-322X </p>
+        <p>ACOMPANHE @gelito no Instragram e no Facebook</p>	
+        <h4>ESPERAMOS POR VOCÊ!!!</h4>
 
 </body>
 </html>
